Merged revisions 579282-582376 via svnmerge from https://svn.apache.org/repos/asf/xmlgraphics/fop/trunk
........
  r580884 | jeremias | 2007-10-01 10:00:28 +0200 (Mon, 01 Oct 2007) | 1 line
  
  Metafocus has renamed their product.
........
  r581806 | jeremias | 2007-10-04 11:04:43 +0200 (Thu, 04 Oct 2007) | 2 lines
  
  Bugzilla #43542:
  Removed dependency on Xalan's XML utilities. Used a method from Commons IO instead.
........
  r581819 | jeremias | 2007-10-04 11:42:00 +0200 (Thu, 04 Oct 2007) | 1 line
  
  Removed unnecessary dependency on Batik in the "fo" package.
........
  r581906 | cbowditch | 2007-10-04 15:51:25 +0200 (Thu, 04 Oct 2007) | 4 lines
  
  Bugzilla #42144
  Safely set postscript page device dictionary
  Submitted by Adrian Cumiskey <dev.at.cumiskey.com>
........
  r581911 | cbowditch | 2007-10-04 15:56:55 +0200 (Thu, 04 Oct 2007) | 3 lines
  
  Bugzilla #43184
  I checked in the changes to xmlgraphics-commons source repo, but forgot to commit the updated JAR to the FOP distro. So here it is.
  Submitted by Adrian Cumiskey <dev.at.cumiskey.com>
........
  r581916 | cbowditch | 2007-10-04 16:03:03 +0200 (Thu, 04 Oct 2007) | 4 lines
  
  Bugzilla #42144
  Missing File from previous commit
  Submitted by Adrian Cumiskey <dev.at.cumiskey.com>
........
  r582124 | cbowditch | 2007-10-05 10:36:48 +0200 (Fri, 05 Oct 2007) | 4 lines
  
  Bugzilla #43070
  Postscript extension : comment before and after page
  Submitted by Adrian Cumiskey <dev.at.cumiskey.com>
........
  r582131 | jeremias | 2007-10-05 10:48:15 +0200 (Fri, 05 Oct 2007) | 7 lines
  
  Bugzilla #43041:
  Added a configuration setting for the renderer/device resolution to the AFP renderer.
  Many Checkstyle violations fixed.
  Submitted by: Adrian Cumiskey <dev.at.cumiskey.com>
  
  Changes to the patch by jeremias:
  - Bugfix: SVGs were rendered in the wrong size when the target-resolution and the renderer-resolution differ.
........
  r582178 | jeremias | 2007-10-05 11:56:12 +0200 (Fri,